# weatherserver

./: .env.template  .gitignore  Cargo.toml  README.md  Rocket.toml.template  config.sh  weatherscript.py  weatherserver.service
migrations/2020-07-05-205310_temperature_table/: down.sql  up.sql
migrations/2020-07-06-134059_use_timestampz/: down.sql  up.sql
migrations/2020-07-06-160832_add_humidity_table/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
static/: index.html
static/css/: weather.css
static/js/: weather.js
