[package]
name = "weatherserver"
version = "0.1.0"
authors = ["Erkka Kääriä <erkka.kaaria@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.5", features = ["tls"] }
chrono = { version = "0.4.13", features = ["serde"] }
diesel = { version = "1.4.5", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
serde_json = "1.0.56"
serde = { version = "1.0.114", features = ["derive"] }
serde_derive = "1.0.114"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "diesel_postgres_pool", "serve"]
