[package]
name = "weatherserver"
version = "0.1.0"
authors = ["Erkka Kääriä <erkka.kaaria@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.10" }
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.7", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "1.0.126"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json", "diesel_postgres_pool", "serve"]
